reverted api change
