# crates/server/openapi.yaml
@@ -88,7 +88,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /package:
+  /package/{logId}/record:
     post:
       summary: Publish a new record to a package log.
       operationId: publishPackageRecord
@@ -101,6 +101,13 @@ paths:
         Publishing package records is an asynchronous operation.
 
         The record must be signed by a key that is authorized to modify the package log.
+      parameters:
+        - name: logId
+          in: path
+          description: The package log identifier.
+          required: true
+          schema:
+            "$ref": "#/components/schemas/AnyHash"
       requestBody:
         required: true
         content:
